--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   background-color: whitesmoke;
   font-family: "Oxygen", sans-serif;
 
-  background: url("/image/BgImage/image6.jpg");
+  background: url("image/BgImage/image6.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -50,7 +50,7 @@ li:hover {
   background-color: blue;
 }
 #logo-img {
-  /*background: url("/image/companyLogo/pdo-logo.jpg") no-repeat;
+  /*background: url("image/companyLogo/pdo-logo.jpg") no-repeat;
   width: 400px;*/
   height: 60px;
   margin-left: 40px;
